PreviewTopic & Draft word wrap css bug fix

--- a/public/res/components/react-draft-wysiwyg.css
+++ b/public/res/components/react-draft-wysiwyg.css
@@ -1059,6 +1059,14 @@ https://cdn.rawgit.com/jpuri/react-draft-wysiwyg/master/docs/src/components/Demo
   border-radius: 2px;
   resize: vertical;
   overflow:auto;
+
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
 }
 .demo-editorWrapper {
 }
